Add data loading interfaces to Java Action Input classes